# fuzzy-infer

./: CLAUDE.md  README.md  pyproject.toml  test_merge.py  test_multiple_results.py
docs/: api.md
examples/: basic_example.py  example.py  fluent_api_example.py  fuzzy_example.py  interactive_queries.txt  modern_example.py  winston.py
examples/knowledge_bases/: README.md  animal_classification.json  animal_classification_complete.json  animals_kb1.json  animals_kb2.json  medical_diagnosis.json  weather_prediction.yaml
fuzzy_infer/: __init__.py  cli.py  core.py  exceptions.py  fuzzy_ops.py  merge.py  models.py  serialization.py
pyinfer/: infer.py
